# BCI-2-Token

./: AUTONOMOUS_SDLC_COMPLETE.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  AUTONOMOUS_SDLC_GENERATION_NEXT_COMPLETE.md  DEPLOYMENT_GUIDE.md  Dockerfile  GENERATION_1_3_IMPLEMENTATION.md  GENERATION_4_IMPLEMENTATION_COMPLETE.md  GENERATION_5_IMPLEMENTATION_COMPLETE.md  GENERATION_5_RESEARCH_COMPLETE.md  GENERATION_6_REVOLUTIONARY_COMPLETE.md  GENERATION_7_PLUS_COMPLETION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_READINESS.md  PROJECT_OVERVIEW.md  README.md  README_APPENDIX.md  SETUP_INSTRUCTIONS.md  autonomous_sdlc_integration.py  autonomous_sdlc_status_1755606140.json  autonomous_sdlc_status_1755606259.json  comprehensive_quality_gates.py  deployment_validation.py  enhanced_mock_torch.py  enhanced_reliability_test.py  enhanced_test_results.json  enhanced_test_suite.py  final_integration_test.py  generation3_performance_test.py  generation5_validation_report.json  generation6_test_results.json  install_minimal.py  mock_quantum.py  mock_torch.py  pyproject.toml  quality_gate_report.json  requirements-prod.txt  requirements.txt  run_quality_checks.py  sdlc_architecture.md  (+9 more)
.github/workflows/: ci.yml
bci2token/: __init__.py  adaptive_algorithms.py  advanced_benchmarking.py  advanced_monitoring.py  advanced_reliability.py  advanced_research.py  advanced_research_next.py  auto_scaling.py  autonomous_evolution.py  autonomous_evolution_v2.py  autonomous_intelligence.py  benchmarking.py  cli.py  continuous_evolution.py  decoder.py  devices.py  enhanced_security.py  error_handling.py  evolutionary_architecture.py  generation6_integration.py  generation7_hyperscale.py  generation_next.py  global_deployment.py  globalization.py  health.py  hyperscale_architecture.py  hyperscale_next.py  hyperscale_optimization.py  input_validation.py  llm_interface.py  models.py  monitoring.py  neural_mesh_network.py  next_gen_architecture.py  next_gen_research.py  optimization.py  performance_optimization.py  performance_scaling.py  preprocessing.py  privacy.py  (+21 more)
ci-cd/: README.md  github-actions-ci.yml
config/: development.json  production.json  staging.json
deployment/: .env.production  bci2token.service  docker-compose.yml  enhanced_deploy.sh  next_generation_deploy.sh  production_config.py
deployment/docker/: Dockerfile  docker-compose.yml
deployment/kubernetes/: deployment.yaml
deployment/scripts/: deploy.sh
examples/: agent_workflow_demo.py  basic_usage.py  streaming_demo.py
monitoring/: metrics.py
src/bci2token/: __init__.py
src/bci2token/agents/: __init__.py  base_agent.py  orchestrator.py
src/bci2token/core/: decoder.py
tests/: __init__.py  conftest.py  test_comprehensive.py  test_core_decoder.py  test_integration.py  test_models.py  test_preprocessing.py
venv-next/: pyvenv.cfg
